# seiryo-sunspot-lib

./: .gitignore  LICENSE  README.md  pyproject.toml  tasks.py
src/seiryo_sunspot_lib/: __init__.py  agg.py  butterfly.py  butterfly_config.py  butterfly_draw.py  butterfly_fromtext.py  butterfly_image.py  butterfly_merge.py  butterfly_trim.py  check_data.py  check_file.py  finder.py  observations.py  observations_calendar.py  observations_config.py  sunspot_number.py  sunspot_number_config.py  sunspot_number_with_flare.py  sunspot_number_with_flare_config.py  sunspot_number_with_silso.py  sunspot_number_with_silso_config.py
tests/: test_agg.py  test_butterfly.py  test_butterfly_draw.py  test_butterfly_fromtext.py  test_butterfly_image.py  test_butterfly_merge.py  test_butterfly_trim.py  test_check_data.py  test_check_file.py  test_observations_calendar.py  test_observations_days.py  test_sunspot_number.py  test_sunspot_number_with_flare.py  test_sunspot_number_with_silso.py
