[project]
name = "seiryo-sunspot-lib"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0.0",
    "polars>=1.0.0",
]
dynamic = ["version"]

[dependency-groups]
dev = [
    "invoke",
    "mypy",
    "ruff",
]
test = [
    "pytest",
    "pytest-cov",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.uv]
default-groups = ["dev", "test"]

[tool.hatch.version]
source = "vcs"

[tool.ruff]
src = ["src"]
target-version = "py310"
line-length = 79
output-format = "grouped"

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812", # missing-trailing-comma
    "D400",   # missing-trailing-period
]
unfixable = [
    "ERA", # eradicate
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.mypy]
strict = true
python_version = "3.10"
show_error_context = true
show_column_numbers = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--doctest-modules",
    "--doctest-continue-on-failure",
]

[tool.coverage.run]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
exclude_also = ["if TYPE_CHECKING:"]
